Fixed rename issue

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <!-- Load the Paper.js library -->
 <script type="text/javascript" src="paper-full.js"></script>
 <!-- Define inlined PaperScript associate it with myCanvas -->
-<script type="text/paperscript" canvas="myCanvas" src="drawline.js"></script>
+<script type="text/paperscript" canvas="main" src="drawline.js"></script>
 </head>
 <body>
-	<canvas id="myCanvas" resize></canvas>
+	<canvas id="main" resize></canvas>
 </body>
 </html>
